--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,11 +27,11 @@ r.ReflectionMethod=1
 
 r.SkinCache.CompileShaders=True
 
-r.RayTracing=True
+r.RayTracing=False
 
 r.Shadow.Virtual.Enable=1
 r.VirtualTextures=False
-r.SkinCache.SceneMemoryLimitInMB=600.555603
+r.SkinCache.SceneMemoryLimitInMB=250.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
